# glibc

./: config.h.in  configure  configure.ac
include/: link.h
sysdeps/unix/sysv/linux/x86/: Makefile  configure  configure.ac  dl-cet.c  dl-cet.h  dl-machine.h  dl-sysdep.c
sysdeps/x86/: cpu-features.c  cpu-features.h  dl-cet.c  libc-start.c
sysdeps/x86_64/: dl-machine.h
